--- a/contenido/contenidos.html
+++ b/contenido/contenidos.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Materias</title>
+    <title>Contenidos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/materias.css">
+    <link rel="stylesheet" href="../css/syle.css">
     <link rel="stylesheet" href="../css/contenidos.css">
     <link rel="stylesheet" href="npm i bootstrap-icons">
 </head>
