--- a/perfil/index.html
+++ b/perfil/index.html
@@ -5,7 +5,9 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Perfil</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <link rel='stylesheet' href='../css/syle.css'>
+    <link rel="stylesheet" href="../css/calendario.css">
 </head>
 
 <body>
@@ -64,10 +66,29 @@
                         </li>
                     </ul>
                 </div>
-                <div class='nav__div'>
-                    <img class='nav__calendar' src='../img/calendario.png' alt='calendario'>
-                </div>
+                
             </div>
+            <div class="wrapper">
+                <header>
+                    <p class="current-date"></p>
+                    <div class="icons">
+                      <span id="prev" class="material-symbols-rounded">chevron_left</span>
+                      <span id="next" class="material-symbols-rounded">chevron_right</span>
+                </div>
+            </header>
+                <div class="calendar">
+                  <ul class="weeks">
+                    <li>Lun</li>
+                    <li>Mar</li>
+                    <li>Mie</li>
+                    <li>Jue</li>
+                    <li>Vie</li>
+                    <li>Sab</li>
+                    <li>Dom</li>
+                  </ul>
+                  <ul class="days"></ul>
+                </div>
+              </div>
         </nav>
         <section class='content'>
             <h1 class='content__title'>Perfil</h1>
@@ -138,6 +159,7 @@
         </section>
     </main>
     <script src='../js/main.js'></script>
+    <script src='../js/calendario.js'></script>
 </body>
 
 </html>
