--- a/materias/index.html
+++ b/materias/index.html
@@ -5,9 +5,11 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Materias</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+    <link rel='stylesheet'
+        href='https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200'>
     <link rel='stylesheet' href='../css/syle.css'>
-    <link rel="stylesheet" href="../css/calendario.css">
+    <link rel='stylesheet' href='../css/calendario.css'>
+    <link rel="stylesheet" href="../css/materias.css">
 </head>
 
 <body>
@@ -66,35 +68,41 @@
                         </li>
                     </ul>
                 </div>
+                <div class='nav__div'>
+                    <div class='wrapper'>
+                        <header>
+                            <p class='current-date'></p>
+                            <div class='icons'>
+                                <span id='prev' class='material-symbols-rounded'>chevron_left</span>
+                                <span id='next' class='material-symbols-rounded'>chevron_right</span>
+                            </div>
+                        </header>
+                        <div class='calendar'>
+                            <ul class='weeks'>
+                                <li>Lun</li>
+                                <li>Mar</li>
+                                <li>Mie</li>
+                                <li>Jue</li>
+                                <li>Vie</li>
+                                <li>Sab</li>
+                                <li>Dom</li>
+                            </ul>
+                            <ul class='days'></ul>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="wrapper">
-                <header>
-                    <p class="current-date"></p>
-                    <div class="icons">
-                      <span id="prev" class="material-symbols-rounded">chevron_left</span>
-                      <span id="next" class="material-symbols-rounded">chevron_right</span>
-                </div>
-            </header>
-                <div class="calendar">
-                  <ul class="weeks">
-                    <li>Lun</li>
-                    <li>Mar</li>
-                    <li>Mie</li>
-                    <li>Jue</li>
-                    <li>Vie</li>
-                    <li>Sab</li>
-                    <li>Dom</li>
-                  </ul>
-                  <ul class="days"></ul>
-                </div>
-              </div>
         </nav>
         <section class='content'>
-
+            <h2 class='content__title'>Mis materias activas</h2>
+            <div class='materias'>
+                <!-- Contenido generado por materias.js -->
+            </div>
         </section>
     </main>
     <script src='../js/main.js'></script>
     <script src='../js/calendario.js'></script>
+    <script src='../js/materias.js'></script>
 </body>
 
 </html>
