--- a/perfil/index.html
+++ b/perfil/index.html
@@ -5,7 +5,8 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Perfil</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <link rel='stylesheet' href='../css/syle.css'>
     <link rel="stylesheet" href="../css/calendario.css">
 </head>
@@ -66,29 +67,28 @@
                         </li>
                     </ul>
                 </div>
-                
             </div>
             <div class="wrapper">
                 <header>
                     <p class="current-date"></p>
                     <div class="icons">
-                      <span id="prev" class="material-symbols-rounded">chevron_left</span>
-                      <span id="next" class="material-symbols-rounded">chevron_right</span>
-                </div>
-            </header>
+                        <span id="prev" class="material-symbols-rounded">chevron_left</span>
+                        <span id="next" class="material-symbols-rounded">chevron_right</span>
+                    </div>
+                </header>
                 <div class="calendar">
-                  <ul class="weeks">
-                    <li>Lun</li>
-                    <li>Mar</li>
-                    <li>Mie</li>
-                    <li>Jue</li>
-                    <li>Vie</li>
-                    <li>Sab</li>
-                    <li>Dom</li>
-                  </ul>
-                  <ul class="days"></ul>
+                    <ul class="weeks">
+                        <li>Lun</li>
+                        <li>Mar</li>
+                        <li>Mie</li>
+                        <li>Jue</li>
+                        <li>Vie</li>
+                        <li>Sab</li>
+                        <li>Dom</li>
+                    </ul>
+                    <ul class="days"></ul>
                 </div>
-              </div>
+            </div>
         </nav>
         <section class='content'>
             <h1 class='content__title'>Perfil</h1>
@@ -99,7 +99,7 @@
                     <button class='button secondary'>Eliminar</button>
                 </div>
                 <div class='perfil__right'>
-                    <div class='card'>
+                    <article class='card'>
                         <h2 class='card__title'>Datos personales:</h2>
                         <div class='card__content'>
                             <div class='card__info'>
@@ -119,8 +119,8 @@
                                 <input class='card__input' type='text' readonly value='29/09/1989'>
                             </div>
                         </div>
-                    </div>
-                    <div class='card'>
+                    </article>
+                    <article class='card'>
                         <h2 class='card__title'>Contacto:</h2>
                         <div class='card__content'>
                             <div class='card__info'>
@@ -132,8 +132,8 @@
                                 <input class='card__input' type='text' readonly value='54 9 11 0123 45XX'>
                             </div>
                         </div>
-                    </div>
-                    <div class='card'>
+                    </article>
+                    <article class='card'>
                         <h2 class='card__title'>Residencia:</h2>
                         <div class='card__content'>
                             <div class='card__info'>
@@ -153,7 +153,7 @@
                                 <input class='card__input' type='text' readonly value='Argentina'>
                             </div>
                         </div>
-                    </div>
+                    </article>
                 </div>
             </div>
         </section>
