--- a/materias/index.html
+++ b/materias/index.html
@@ -94,6 +94,14 @@
             </div>
         </nav>
         <section class='content'>
+            <header class="cabecera">
+                <div>
+                    <h3>Nombre apellido</h3>
+                        <button class="btn-header">Cerrar sesión</button>
+                        <button class="btn-header">Mi perfil</button>
+                </div>
+                <img id="img-perfil" src="../img/usuario.png" alt="usuario">
+                </header>
             <h2 class='content__title'>Mis materias activas</h2>
             <div class='materias'>
                 <!-- Contenido generado por materias.js -->
