agregando boton organizar materias

--- a/materias/index.html
+++ b/materias/index.html
@@ -101,7 +101,10 @@
                         <button class="btn-header">Mi perfil</button>
                 </div>
                 <img id="img-perfil" src="../img/usuario.png" alt="usuario">
-                </header>
+            </header>
+            <div id="container_organizar">
+                <button id="btn-organizar">Organizar materias</button>
+            </div>
             <h2 class='content__title'>Mis materias activas</h2>
             <div class='materias'>
                 <!-- Contenido generado por materias.js -->
