--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
                     <img src="./img/pluma-isologo.png" class="isotipo">
                 </div>
                 <label for="usuario">Usuario/DNI</label>
-                <input type="text" id="usuario" placeholder="usuario..." class="entrada-form">
+                <input type="text" id="usuario" placeholder="usuario..." name="usuario" class="entrada-form">
                 <label for="contraseña">Contraseña</label>
                 <input type="password" id="contraseña" placeholder="contraseña..." class="entrada-form">
                 <p id="olvcontraseña">¿Olvidaste tu contraseña?</p>
                 <button id="ingresar-btn">Ingresar</button>
+                <div id="botones-ocultos">
+                    <hr>
+                    <button>Intraconsulta</button>
+                    <button>Historico</button>
+                    <button>Ingresantes</button>
+                </div>
             </form>
         </section>
         <section id="side-bar">
@@ -32,6 +38,7 @@
                 <button>Ingresantes</button>
             </div>
         </section>
+       
     </main>
 
 </body>
