--- a/contenido/contenidos.html
+++ b/contenido/contenidos.html
@@ -6,13 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contenidos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    
     <link rel="stylesheet" href="../css/syle.css">
+    <link rel="stylesheet" href="../css/materias.css">
+
     <link rel="stylesheet" href="../css/contenidos.css">
     <link rel="stylesheet" href="npm i bootstrap-icons">
 </head>
 
 <body>
-    <main class='materias__main'>
+  <section class='content'>
+    <header class="cabecera">
+        <div>
+            <h3>Nombre apellido</h3>
+                <button class="btn-header">Cerrar sesión</button>
+                <button class="btn-header">Mi perfil</button>
+        </div>
+        <img id="img-perfil" src="../img/usuario.png" alt="usuario">
+    </header>
+   
+ 
+</section>
+    <main class='main'>
         <nav class='nav'>
             <svg class='nav__icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                 <path fill-rule="evenodd"
