--- a/materias/index.html
+++ b/materias/index.html
@@ -7,9 +7,8 @@
     <title>Materias</title>
     <link rel='stylesheet'
         href='https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200'>
-    <link rel='stylesheet' href='../css/syle.css'>
-    <link rel='stylesheet' href='../css/calendario.css'>
-    <link rel="stylesheet" href="../css/materias.css">
+    <link rel='stylesheet' href='../css/global.css'>
+    <link rel='stylesheet' href='../css/materias.css'>
 </head>
 
 <body>
@@ -96,9 +95,9 @@
         <section class='content'>
             <header class="cabecera">
                 <div>
-                    <h3>Nombre apellido</h3>
-                        <button class="btn-header">Cerrar sesión</button>
-                        <button class="btn-header">Mi perfil</button>
+                    <h3>Juan Pérez</h3>
+                        <button class="btn-header"><a class='btn-link' href="../index.html">Cerrar sesión</a></button>
+                        <button class="btn-header"><a class='btn-link' href="../perfil/index.html">Mi perfil</a></button>
                 </div>
                 <img id="img-perfil" src="../img/usuario.png" alt="usuario">
             </header>
