--- a/perfil/index.html
+++ b/perfil/index.html
@@ -7,8 +7,8 @@
     <title>Perfil</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
-    <link rel='stylesheet' href='../css/syle.css'>
-    <link rel="stylesheet" href="../css/calendario.css">
+    <link rel='stylesheet' href='../css/global.css'>
+    <link rel='stylesheet' href='../css/perfil.css'>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
                 <div class='nav__div'>
                     <ul class='nav__ul'>
                         <li class='nav__li'>
-                            <a class='nav__link' href=''>
+                            <a class='nav__link' href='../materias/index.html'>
                                 <h2 class='nav__title'>Inicio</h2>
                                 <svg class='nav__svg' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'>
                                     <path
@@ -91,6 +91,14 @@
             </div>
         </nav>
         <section class='content'>
+            <header class="cabecera">
+                <div>
+                    <h3>Juan Pérez</h3>
+                    <button class="btn-header"><a class='btn-link' href="../index.html">Cerrar sesión</a></button>
+                    <button class="btn-header"><a class='btn-link' href="../perfil/index.html">Mi perfil</a></button>
+                </div>
+                <img id="img-perfil" src="../img/usuario.png" alt="usuario">
+            </header>
             <h1 class='content__title'>Perfil</h1>
             <div class='perfil'>
                 <div class='perfil__left'>
