--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <main>
         <section id="formulario">
-            <form action='./materias/index.html' method='post'>
+            <form action='./materias/index.html' id='form'>
                 <div id="ctn-img">
                     <img src="./img/pluma-isologo.png" class="isotipo">
                 </div>
@@ -38,8 +38,10 @@
                 <button>Ingresantes</button>
             </div>
         </section>
-       
+
     </main>
+
+    <script src="./js/form.js"></script>
 
 </body>
 
